Fixed pre>code style that ignores the whitespaces

--- a/src/shidashi.scss
+++ b/src/shidashi.scss
@@ -1158,6 +1158,7 @@ pre code {
   &[class] { font-size: 92% !important; }
   background-color: transparent;
   border-radius: unset;
+  white-space: pre;
 }
 
 
